# frst

./: .gitignore  CMakeLists.txt  gfrst.cpp  gfrst.files  gfrst.h  gfrstMultiscale.cpp  gfrstMultiscale.h  gfrst_multiscale.h  gradientfield.cpp  main.cpp  multiscale_test.cpp  polygone.cpp  polygone.h  readme.md
